k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-application-back
  namespace: thebylito
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-application-back
  template:
    metadata:
      labels:
        app: my-application-back
    spec:
      containers:
        - name: my-application-back
          ## docker.pkg.github.com/thebylito/adonis-v5-demo-k8s/my-application-back:VERSAO
          ## nesse caso nao e preciso especificar 'imagePullSecrets'
          image: <IMAGE>
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 3333
          startupProbe:
            httpGet:
              path: /health
              port: 3333
          lifecycle:
            postStart:
              exec:
                # Roda migracoes apenas na instancia de gravacao
                command:
                  [
                    "/bin/sh",
                    "-c",
                    "MYSQL_READ_HOST=$MYSQL_HOST node ace migration:run --force",
                  ]
      # Necessario para apontar ao registro do github
      imagePullSecrets:
        - name: registry-github
