k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-application-back-service
  namespace: thebylito
spec:
  ports:
    - port: 80
      targetPort: 3333
  selector:
    app: my-application-back
