k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-application-back-ingress
  namespace: thebylito
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - my-application.thebylito.dev
      secretName: my-application-thebylito-dev-tls
  rules:
    - host: my-application.thebylito.dev
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: my-application-back-service
              port:
                number: 80
